# SkypeClassic

./: .gitignore  CMakeLists.txt
resources/: resources.qrc
resources/styles/: skype1.qss
src/: main.cpp
src/app/: SkypeApp.cpp  SkypeApp.h
src/audio/: AudioStreamManager.cpp  AudioStreamManager.h  JitterBuffer.cpp  JitterBuffer.h  OpusCodec.cpp  OpusCodec.h  VideoStreamManager.cpp  VideoStreamManager.h
src/models/: Contact.cpp  Contact.h  GroupChat.h  Message.cpp  Message.h
src/network/: ConferenceManager.cpp  ConferenceManager.h  LANPeerService.cpp  LANPeerService.h  SkypeClient.cpp  SkypeClient.h
src/server/: ChatServer.cpp  ChatServer.h  server_main.cpp
src/utils/: CryptoUtils.cpp  CryptoUtils.h  SoundPlayer.cpp  SoundPlayer.h
src/widgets/: ContactItem.cpp  ContactItem.h  ContactListWidget.cpp  ContactListWidget.h  DialPad.cpp  DialPad.h  HistoryList.cpp  HistoryList.h  StatusSelector.cpp  StatusSelector.h
src/windows/: AddContactDialog.cpp  AddContactDialog.h  CallWindow.cpp  CallWindow.h  ChatWindow.cpp  ChatWindow.h  ConferenceCallWindow.cpp  ConferenceCallWindow.h  FileTransferDialog.cpp  FileTransferDialog.h  GroupChatWindow.cpp  GroupChatWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  OptionsDialog.cpp  OptionsDialog.h  SearchDialog.cpp  SearchDialog.h
